# docs/swagger.json
@@ -51,6 +51,17 @@
                     "Books"
                 ],
                 "summary": "Create Book by Code",
+                "parameters": [
+                    {
+                        "description": "Request of Creating Book Object",
+                        "name": "request",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/request.CreateBookRequest"
+                        }
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -150,6 +161,37 @@
                             "type": "json"
                         }
                     }
+                }
+            }
+        }
+    },
+    "definitions": {
+        "request.CreateBookRequest": {
+            "description": "Request about creating Book",
+            "type": "object",
+            "required": [
+                "author",
+                "name",
+                "page"
+            ],
+            "properties": {
+                "author": {
+                    "type": "string",
+                    "maxLength": 30,
+                    "minLength": 10
+                },
+                "name": {
+                    "type": "string",
+                    "maxLength": 30,
+                    "minLength": 2
+                },
+                "page": {
+                    "type": "integer",
+                    "maximum": 500,
+                    "minimum": 20
+                },
+                "status": {
+                    "type": "boolean"
                 }
             }
         }
