# model/dto/request/book_request.go
@@ -1,5 +1,7 @@
 package request
 
+// CreateBookRequest
+// @Description Request about creating Book
 type CreateBookRequest struct {
 	Name   string `validate:"required,min=2,max=30" json:"name"`
 	Page   int    `validate:"required,min=20,max=500" json:"page"`
